--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "copybox",
   "version": "1.0.0",
   "description": "A react component to handle copying and pasting data",
-  "main": "src/index.js",
+  "main": "src/CopyBox.js",
   "scripts": {
-    "test": "npm test"
+    "test": "npx mocha --watch --require ./tests/mocha-setup.js ./src/**/test-*.js"
   },
   "repository": {
     "type": "git",
@@ -23,23 +23,35 @@
   "homepage": "https://github.com/lostclawz/copybox#readme",
   "dependencies": {
     "classnames": "^2.2.6",
-    "react": "^16.5.2"
+    "react": "^16.5.2",
+    "react-dom": "^16.5.2"
   },
   "devDependencies": {
     "@babel/cli": "^7.1.2",
     "@babel/core": "^7.1.2",
     "@babel/plugin-proposal-class-properties": "^7.1.0",
-    "@babel/plugin-proposal-decorators": "^7.1.2",
     "@babel/plugin-proposal-object-rest-spread": "^7.0.0",
-    "@babel/plugin-transform-destructuring": "^7.1.2",
+    "@babel/plugin-transform-destructuring": "^7.1.3",
     "@babel/preset-env": "^7.1.0",
     "@babel/preset-react": "^7.0.0",
     "@babel/register": "^7.0.0",
     "chai": "^4.2.0",
-    "enzyme": "^3.6.0",
-    "enzyme-adapter-react-16": "^1.5.0",
+    "enzyme": "^3.7.0",
+    "enzyme-adapter-react-16": "^1.6.0",
     "eslint": "^5.6.1",
     "mocha": "^5.2.0",
-    "sinon": "^6.3.5"
+    "prop-types": "^15.6.2",
+    "sinon": "^7.0.0"
+  },
+  "babel": {
+    "presets": [
+      "@babel/env",
+      "@babel/react"
+    ],
+    "plugins": [
+      "@babel/plugin-proposal-object-rest-spread",
+      "@babel/plugin-transform-destructuring",
+      "@babel/plugin-proposal-class-properties"
+    ]
   }
 }
